--- a/LaMarqueza/Templates/Productos.html
+++ b/LaMarqueza/Templates/Productos.html
@@ -8,15 +8,16 @@
         <!-- Productos -->
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-6 productos">
             {% for a in productosquerry %}
-            {% if a.ESTADO_PRO == '1' %}
+            {% if a.ESTADO_PRO == 1 and a.EXISTENCIA_PRO > 0 %}
             <div class="col ">
                 <!-- Agrega el id del producto al data-bs-target -->
-                <a data-bs-toggle="modal" data-bs-target="#ModalProductos{{ a.ID_PRODUCTO  }}">
+                <a data-bs-toggle="modal" data-bs-target="#ModalProductos{{ a.ID_PRODUCTO_PRO  }}">
                     <div class="card shadow-sm Mproducto img-huevos productoscol">
                         <img src='/Media/productos/{{a.FOTO_PRO}}'/>
                         <div class="card-body">
                             <h5 class="card-title">{{a.NOMBRE_PRO}}</h5>
-                            <p>${{a.PRECI_PRO}}</p>
+                            <p>${{a.PRECIO_PRO}}</p>
+                            <P>Disponibles: {{a.EXISTENCIA_PRO}}</P>
                         </div>
                     </div>
                 </a>
@@ -24,34 +25,38 @@
 
 
 
-
-
-
-
             <!-- Seccion InfoProductos -->
-            <div class="modal fade" id="ModalProductos{{ a.id_producto_pro  }}" tabindex="-1"
+            <div class="modal fade" id="ModalProductos{{ a.ID_PRODUCTO_PRO  }}" tabindex="-1"
                 aria-labelledby="ModalProductosLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header text-center">
-                                <h5 class="modal-title w-100" id="ModalProductosLabel">{{ a.nombre_pro }}</h5>
+                                <h5 class="modal-title w-100" id="ModalProductosLabel">{{ a.NOMBRE_PRO }}</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
                             <div class="modal-body text-center">
-                                <img src='/Media/productos/{{a.foto_pro}}' class='modal-image img-fluid' />
-                                <p>${{a.precio_pro}}</p>
+                                <div class="modal-body text-center">
+                                <img src='/Media/productos/{{a.FOTO_PRO}}' class='modal-image img-fluid' style="width: 200px; height: auto;" />
+                                <p> Precio: ${{a.PRECIO_PRO}}</p>
+                                <p>Descripccion:<br> {{a.DESCRIPCION_PRO}}</p>
                             </div>
-                            <form class="text-center">
+                               
+                            </div>
+                            <form class="text-center" method="POST" action="{% url 'agregar_carrito'%}">
                                 <div class="mb-3 w-50 mx-auto">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="usuario" value="{{ request.user.id_usuario_usu }}">
+                                    <input type="hidden" name="producto" value="{{ a.ID_PRODUCTO_PRO }}">
+                                    <input type="hidden" name="precio" value="{{ a.PRECIO_PRO }}">
+                                    <input type="hidden" name="nombre" value="{{ a.NOMBRE_PRO }}">
+
                                     <label class="form-label">Ingrese La Cantidad</label>
-                                    <input type="text" class="form-control" id="exampleInputEmail1"
-                                        aria-describedby="emailHelp">
+                                    <input type="number" name="cantidad" class="form-control" id="exampleInputEmail1" min="1" aria-describedby="emailHelp">
                                 </div>
                                 <div class=" justify-content-center">
-                                    <button type="button" id="Agregar" class="btn btn-secondary">Agregar al
-                                        carrito</button>
+                                    <button type="submit" id="Agregar" class="btn btn-secondary">Agregar al carrito</button>
                                 </div>
                             </form>
                         </div>
