--- a/LaMarqueza/Templates/index.html
+++ b/LaMarqueza/Templates/index.html
@@ -36,7 +36,7 @@
 <!-- Seccion Productos -->
 <div>
     <div class="container productos">
-        <a href="{% url 'productos' %}" class="titulos marron-principal">Productos</a>
+        <a href="{% url 'productos' %}" class="titulos marron-principal">Linea De Productos</a>
         <p class="text-center marron-principal">
             Productos frescos y de calidad, <br />
             directamente desde la finca a tu hogar. <br />
