--- a/LaMarqueza/Templates/Administrador.html
+++ b/LaMarqueza/Templates/Administrador.html
@@ -14,10 +14,10 @@
       <a class="nav-link" href="{% url "categoriasadmin" %}">Categorias de Producto</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Ventas</a>
+      <a class="nav-link" href="{% url "ordenes" %}">Ordenes</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" aria-disabled="true">Perfil</a>
+      <a class="nav-link " href="{% url "perfil" %}" >Perfil</a>
     </li>
   </ul>
   <div style="padding: 10%;">
