--- a/LaMarqueza/static/CSS/Estilos.css
+++ b/LaMarqueza/static/CSS/Estilos.css
@@ -338,15 +338,13 @@
 .Nosotros {
     text-align: center;
     /*Se centra el texto*/
-    padding-top: 60px;
-    /*Agrega a productos un espaciado superior*/
-
+   
 }
 
 .NosotrosText {
     padding-top: 20px;
     /*Agrega a productos un espaciado superior*/
-
+    font-size: 20px; /* Ajusta este valor a tus necesidades */
     text-align: center;
     /*Se centra el texto*/
 
@@ -565,7 +563,7 @@
 }
 
 .cardNosostros {
-    margin-top: 15%;
+    margin-top: 20%;
 }
 
 .EspacioCardNosotros{
@@ -654,3 +652,15 @@
     background-color: #ffffff!important;
 }
 
+.dropdown-item:active {
+    color: green !important;
+    background-color: transparent !important;
+}
+
+.dropdown-item.verde-oscuro {
+    color: green !important;
+}
+
+.dropdown-item:hover {
+    color: green !important;
+}
