--- a/LaMarqueza/Templates/CrearProductos.html
+++ b/LaMarqueza/Templates/CrearProductos.html
@@ -34,7 +34,7 @@
         <label for="estado_pro">Estado:</label><br>
         <input type="checkbox" id="estado_pro" name="estado_pro" {% if usuario.is_staff %}checked{% endif %}><br>
         <br>
-        z
+        <input type="submit" name="action" value="Crear Producto">
     </form>
 
 {% endblock Administrador %}
