--- a/LaMarqueza/Templates/Principal.html
+++ b/LaMarqueza/Templates/Principal.html
@@ -13,6 +13,8 @@
     <link type="text/css" rel="stylesheet" href='{% static "CSS/Colores.css" %}' />
     <link type="text/css" rel="stylesheet" href='{% static "CSS/Estilos.css" %}' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <!-- navBar -->
