--- a/LaMarqueza/Templates/ProductoDetalles.html
+++ b/LaMarqueza/Templates/ProductoDetalles.html
@@ -23,8 +23,17 @@
         <input type="text" id="precio_pro" name="precio_pro" value="{{ producto.precio_pro }}"><br>
         <label for="existencia_pro">Existencias:</label><br>
         <input type="text" id="existencia_pro" name="existencia_pro" value="{{ producto.existencia_pro }}"><br>
-        <label for="categoria_pro">Categoría:</label><br>
-        <input type="text" id="categoria_pro" name="categoria_pro" value="{{ producto.categoria_pro }}"><br>
+
+
+
+      <label for="Categoria">Categoria</label><br>
+        <select id="categoria_pro" name="categoria_pro">
+            {% for categoria in categoria %}
+            
+            <option value="{{ categoria.NOMBRE_CAT }}">{{ categoria.NOMBRE_CAT }}</option>
+            {% endfor %}
+        </select><br>
+
         <label for="estado_pro">Estado:</label><br>
         <input type="checkbox" id="estado_pro" name="estado_pro"  {% if producto.estado_pro %}checked{% endif %}><br>
         <label for="foto">Foto actual:</label><br>
@@ -34,7 +43,7 @@
         <input type="file" name="foto_pro">
         
         <label for="foto_pro">La imagen debe de tener un tamaño 500px x 500px:</label><br>
-        
+      
         <br>
         <input type="submit" name="action" value="Actualizar">
         <input type="submit" name="action" value="Eliminar" id="delete-button">
